tests/negative/parser/bar-else.orng
fn main() -> Int
    case
    | true  => 0
    | else  3